Editing messages about points received. Added Turkish language support.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -102,4 +102,5 @@
 		Add forvard FPS_OnResetGeneralStats and FPS_OnFPSResetAllStats.
 		SteamWorks extension is now optional.
 		Add cvar sm_fps_reset_modules_stats.
-		
+		Editing messages about points received. 
+		Added Turkish language support.
