--- a/translations/FirePlayersStatsRanks.phrases.txt
+++ b/translations/FirePlayersStatsRanks.phrases.txt
@@ -5,7 +5,7 @@
 		"en"		"Calibration"
 		"ru"		"Калибровка"
 		"ua"		"Калібрування"
-		"tr"		"Kalibrasyon" 
+		"tr"		"Rankınız Yok"
 	}
 
 	// Аналогично можете добавлять все звания. Пример:
