--- a/FPS_Modules/FPS_HintInfo/translations/FPS_HintInfo.phrases.txt
+++ b/FPS_Modules/FPS_HintInfo/translations/FPS_HintInfo.phrases.txt
@@ -6,6 +6,7 @@
 		"en"		"<pre>Points: <font color='#7a1e1e'>{1}</font>\tPosition: <font color='#2e592b'>{2}/{3}</font>\nLevel: <font color='#1e4c7a'>{4}</font>\tRank: <font color='#a65e16'>{5}</font></pre>"
 		"ru"		"<pre>Поинты: <font color='#7a1e1e'>{1}</font>\tПоз.: <font color='#2e592b'>{2}/{3}</font>\nУровень: <font color='#1e4c7a'>{4}</font>\tРанг: <font color='#a65e16'>{5}</font></pre>"
 		"ua"		"<pre>Поінти: <font color='#7a1e1e'>{1}</font>\tПоз.: <font color='#2e592b'>{2}/{3}</font>\nРівень: <font color='#1e4c7a'>{4}</font>\tРанг: <font color='#a65e16'>{5}</font></pre>"
+		"tr"		"<pre>Puan: <font color='#7a1e1e'>{1}</font>\tSıra: <font color='#2e592b'>{2}/{3}</font>\nSeviye: <font color='#1e4c7a'>{4}</font>\tRank: <font color='#a65e16'>{5}</font></pre>"
 	}
 
 	"ChangeHintStatusChat"
@@ -14,6 +15,7 @@
 		"en"		"Player statistics display in hint {1}"
 		"ru"		"Отображение статистики игрока в хинте {1}"
 		"ua"		"Відображення статистики гравця в хінті {1}"
+		"tr"		"İstatistikler ekranda görüntülenecek {1}"
 	}
 
 	"ChangeHintStatusMenu"
@@ -22,6 +24,7 @@
 		"en"		"Display statistics in hint [{1}]"
 		"ru"		"Отображение статистики в хинте [{1}]"
 		"ua"		"Відображення статистики в хінті [{1}]"
+		"tr"		"İstatistikleri ekranda görüntüle [{1}]"
 	}
 
 	"DisabledChat"
@@ -29,6 +32,7 @@
 		"en"		"{RED}disabled"
 		"ru"		"{RED}выключено"
 		"ua"		"{RED}вимкнено"
+		"tr"		"{RED}devre dışı"
 	}
 
 	"EnabledChat"
@@ -36,6 +40,7 @@
 		"en"		"{GREEN}enabled"
 		"ru"		"{GREEN}включено"
 		"ua"		"{GREEN}увімкнено"
+		"tr"		"{GREEN}aktif"
 	}
 
 	"Disabled"
@@ -43,6 +48,7 @@
 		"en"		"Disabled"
 		"ru"		"Выключено"
 		"ua"		"Вимкнено"
+		"tr"		"Devre Dışı"
 	}
 
 	"Enabled"
@@ -50,5 +56,6 @@
 		"en"		"Enabled"
 		"ru"		"Включено"
 		"ua"		"Увімкнено"
+		"tr"		"Aktif"
 	}
 }
