--- a/FPS_Modules/FPS_MapsStats/translations/FPS_MapStats.phrases.txt
+++ b/FPS_Modules/FPS_MapsStats/translations/FPS_MapStats.phrases.txt
@@ -41,10 +41,10 @@
 	"MapStatistics_Cs"
 	{
 		"#format"	"{1:i},{2:i}"
-		"en"		"Hostage rescued: {1} \nHostage killed: {2}"
-		"ru"		"Заложников спасено: {1} \nЗаложников убито: {2}"
-		"ua"		"Заручників врятовано: {1} \nзаручників вбито: {2}"
-		"tr"		"Hostage rescued: {1} \nHostage killed: {2}"
+		"en"		"Hostage killed: {1} \nHostage rescued: {2}"
+		"ru"		"Заложников убито: {1} \nЗаложников спасено: {2}"
+		"ua"		"Заручників вбито: {1} \nЗаручників врятовано: {2}"
+		"tr"		"Hostage killed: {1} \nHostage rescued: {2}"
 	}
 	"MapStatistics_De"
 	{
@@ -53,14 +53,6 @@
 		"ru"		"Бомб установлено: {1} \nБомб разминировано: {2}"
 		"ua"		"Бомб встановлено: {1} \nбомб разміновано: {2}"
 		"tr"		"Bomba Plant: {1} \nBomba Defuse: {2}"
-	}
-	"MapStatistics_Custom"
-	{
-		"#format"	"{1:i},{2:i}"
-		"en"		"Rounds won \nRounds for CT: {1} \nRounds for T: {2}"
-		"ru"		"Выигранные раунды \nРаундов за КТ: {1} \nРаундов за Т: {2}"
-		"ua"		"Виграні раунди \nРаундів за КТ: {1} \nРаундів за Т: {2}"
-		"tr"		"Round Kazanıdlı \nCT: {1} \nT: {2}"
 	}
 	"NoData"
 	{
