Fix translation phrase.

--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -129,7 +129,7 @@
 	}
 	"ListsOfTops"
 	{
-		"en"		"Available lists"
+		"en"		"TOP lists"
 		"ru"		"Списки топов"
 		"ua"		"Списки топів"
 		"tr"		"Mevcut Sıralamalar"
