Added debug level

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -105,3 +105,4 @@
 		Editing messages about points received. 
 		Added Turkish language support.
 		Add native FPS_GetPlayersCount.
+1.5.5 - Added debug level.
