Fixed resetting played time when resetting personal statistics. Fixed debug

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -108,3 +108,4 @@
 1.5.5 - Added debug level.
 		Added cvar sm_fps_ignore_new_players.
 		Now when UPDATE_SERVER_DATA is 0, server name will not be updated.
+		Fixed resetting played time when resetting personal statistics.
