--- a/CHANGELOG
+++ b/CHANGELOG
@@ -109,3 +109,5 @@
 		Added cvar sm_fps_ignore_new_players.
 		Now when UPDATE_SERVER_DATA is 0, server name will not be updated.
 		Fixed resetting played time when resetting personal statistics.
+		Updated forward FPS_OnDatabaseConnected.
+		Forward FPS_PlayerPosition renamed to FPS_OnPlayerPosition.
