--- a/CHANGELOG
+++ b/CHANGELOG
@@ -117,3 +117,4 @@
 1.5.6 - Added forward FPS_OnClientDisconnect.
 		Optimized statistics collection for weapons.
 		When clearing personal statistics, played time is cleared.
+		Fixed possible abuse of experience.
