Try fix invalid client index. Fix FPS_MapsStats translate

--- a/FPS_Modules/FPS_MapsStats/translations/FPS_MapStats.phrases.txt
+++ b/FPS_Modules/FPS_MapsStats/translations/FPS_MapStats.phrases.txt
@@ -17,9 +17,9 @@
 	}
 	"MapTop_PlayerKills"
 	{
-		"en"		"TOP-10 maps by kills"
-		"ru"		"TOP-10 карт по убийствам"
-		"ua"		"TOP-10 карт по вбивствам"
+		"en"		"TOP-10 maps by your kills"
+		"ru"		"TOP-10 карт по вашим убийствам"
+		"ua"		"TOP-10 карт по вашим вбивствам"
 		"tr"		"TOP-10 Harita Kill Sırası"
 	}
 	"MapTop_All"
